+ Added tags feature (owned, wishlisted, coupons, gift, guest pass, friends-want).
+ Added "Empty Wishlist" button (May be slow on large wishlists).
+ Added new feature - storefront carousel app descriptions.
+ Re-wrote price tab which now shows current best and historical best deals.  
+ Added price tab to game bundles.

v3.0
-----
: Fixed wishlist detection for non-English users
+ Coupon discounts now stack where applicable (most currencies)
+ Options page changed from dropdown boxes to check boxes
+ Added a link for AchievementStats.com
+ Some AJAX loaded content now correctly highlights (still not in search yet)

v2.9
-----
: Fixed a bug with coupon values calculating wrong for non-US currencies

v2.8
-----
+ Added profile links to various web services
+ Added forum link in community drop down
+ Added coupon highlighting and app page coupon notifications and pricing
+ Added Enhanced Steam option page link to header
+ Added option to remove "Install Steam" button on each page at the top

v2.7
-----
: Fixed a bug when setting the default greenlight banner option
: Fixed a bug which showed Tages on all games in German store
: Fixed a bug on some games which have no DRM but were showing DRM banner

v2.6
-----
+ Added daily deal detection for owned / wishlisted

v2.5
-----
+ Added support for WSGF (Wide Screen Gaming Forum) certifications
+ Added option to replace Greenlight banner - off by default

v2.4
-----
: Fixed a major bug with wishlist cart buttons (sorry!)

v2.3
-----
: Fixed a bug in case-sensitive OS platforms
+ Localized price history information, it runs internally now
+ Reduced the number of GET requests overall, should help speed up performance
+ added an "add to cart" button on the wishlist page for each item

v2.2
-----
: Fixed a bug with purchase dates displaying on 3rd party drm warnings
: Fixed a bug where bundle prices weren't working if all games are under $10

v2.1
-----
+ Added new DLC categorization to DLC pages