@@ -308,6 +308,15 @@
 					<div id="store_metacritic_text" class="text">Show Metacritic User Scores</div>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="showsteamdb">
+				</td>
+				<td height=30>
+					<div id="store_steamdb_text" class="text">Show SteamDB Links</div>
+				</td>
+			</tr>
 
 			<tr>
 				<td>
